test_suite/tests/ui/fail/unspecified_fn_arg/unknown_arg.rs
use clapi::macros::*;

#[command]
#[arg(x)]
fn echo(values: Vec<String>){}

fn main(){}