test_suite/tests/ui/fail/unspecified_fn_arg/unknown_arg.stderr
error: custom attribute panicked
 --> $DIR/unknown_arg.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: argument `x` is no defined in `fn echo`
